fixed an issue where UI wasn't responsive for small mobile devices and messages where getting too much width

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -35,3 +35,10 @@
 
   // overflow-y: scroll;
 }
+
+
+.wrapFullScreen {
+  width: 98vw;
+  height: 96vh;
+}
+
