--- a/src/activeChat/ActiveChat.module.scss
+++ b/src/activeChat/ActiveChat.module.scss
@@ -14,6 +14,7 @@ $border-radius: 0.5rem;
   gap: 3rem;
 
   width: fit-content;
+  max-width: 80%;
   // parent needs to have a fixed height apparently
 }
 
@@ -62,4 +63,18 @@ $border-radius: 0.5rem;
 }
 
 
+@media (max-width: 375px) {
+  .messageAndTryAgainContainer {
+    gap: 1rem;
+    padding: 0rem;
+  } 
 
+  .sendButton {
+    margin-left: 0rem;
+  }
+
+  .inputField {
+    width: 85%;
+  }
+
+}
